Version 1.8.5 (2022-06-05)
 - Remove sysvars if deleted from CCU
 - Add check for sysvar type in sensor

Version 1.8.4 (2022-06-04)
- Refactor all sysvar script
- Use ext_marker script in combination with SysVar.getAll

Version 1.8.3 (2022-06-04)
- Refactor sysvar creation eventing

Version 1.8.2 (2022-06-03)
- Fix build

Version 1.8.1 (2022-06-03)
- Use marker in sysvar description for extended sysvars

Version 1.8.0 (2022-06-02)
- Enable additional sysvar entity types

Version 1.7.3 (2022-06-01)
- Add more debug logging

Version 1.7.2 (2022-06-01)
- Better differentiate between float and int for sysvars
- Switch from # as unit placeholder for sysvars to ' '
- Move sysvar length check to sensor

Version 1.7.1 (2022-05-31)
- Rename parameter channel_address to address for put/get_paramset

Version 1.7.0 (2022-05-31)
- Refactor system variables
- Add more types for sysvar entities

Version 1.6.2 (2022-05-30)
- Add more options for boolean conversions

Version 1.6.1 (2022-05-29)
- Fix entity definition for HMIP-HEATING

Version 1.6.0 (2022-05-29)
- Add impulse event
- Add LEVEL and STATE to HmIP-Heating group to display hvac_action
- Add device_type as model to attributes

Version 1.5.4 (2022-05-24)
- Add function attribute only if set

Version 1.5.3 (2022-05-24)
- Rename subsection to function

Version 1.5.2 (2022-05-24)
- Add subsection to attributes
- Use parser for internal sysvars

Version 1.5.0 (2022-05-23)
- Add option to replace too technical parameter name by friendly parameter name
- Ignore more parameters by device
- Use dataclass for sysvars
- Limit sysvar length to 255 chars due to HA limitations

Version 1.4.0 (2022-05-16)
- Block parameters by device_type that should not create entities in HA
- Fix remove instance on shutdown

Version 1.3.1 (2022-05-13)
- Increase connection timeout(30s->60s) and reconnect interval(90s->120s) to better support slower hardware

Version 1.3.0 (2022-05-06)
- Use unit for vars, if available