@@ -125,8 +125,6 @@ ATTR_VERIFY_TLS = "verify_tls"
 
 SYSVAR_HASEXTMARKER = "hasExtMarker"
 SYSVAR_ID = "id"
-SYSVAR_IS_INTERNAL = "isInternal"
-SYSVAR_IS_VISIBLE = "isVisible"
 SYSVAR_MAX_VALUE = "maxValue"
 SYSVAR_MIN_VALUE = "minValue"
 SYSVAR_NAME = "name"
